# creo_ai

./: .gitignore  REBUILD_GUIDE.md  data.dvc  validation_framework.py
cpp/: CMakeLists.txt
cpp/include/: NL2Trail.h  SpmTokenizer.h
cpp/src/: NL2Trail.cpp  SpmTokenizer.cpp  main.cpp
data/: creo_dataset.jsonl
py/: export_onnx.py  merge_lora.py  prepare_dataset.py  quantize_model.py  requirements.txt  train_lora_t5.py  voice_input.py
